--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,8 @@
         android:id="@+id/mi_new_size"
         android:title="Choose new size"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/mi_custom"
+        android:title="Create custom game"
+        app:showAsAction="never" />
 </menu>
